first-app-commit

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "placess",
-    "slug": "placess",
+    "name": "places",
+    "slug": "places",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
