--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "placess",
+  "name": "places",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,12 +10,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "express": "^4.17.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-navigation-search-bar": "^1.0.8",
+    "react-native-paper": "^4.11.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.15.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
