--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "country-flag-icons": "^1.4.25",
     "currency-converter-lt": "^1.2.3",
-    "expo": "~44.0.0",
+    "expo": "^1.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-svg-uri": "^1.3.1",
     "express": "^4.17.2",
@@ -32,7 +32,7 @@
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-flagkit": "^0.9.5",
-    "react-native-svg-uri": "^1.2.3",
+    "react-native-svg-uri": "^0.0.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "^11.15.0",
