--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ node_modules
 node_modules
 babel.config.js
 keys.json
-package.lock.json
+package-lock.json
 package.json
 yarn-error.log
 yarn.lock
